optimised for ipad

--- a/about.html
+++ b/about.html
@@ -161,7 +161,7 @@
 
 
     <div data-scroll-section class="row" style="width: 100%; padding: 0px; margin: 0px; background: #fff700;">
-      <div class="col-xl-7" style="padding: 0px;">
+      <div class="col-xl-7 col-md-8" style="padding: 0px;">
         <div class="second-section d-flex align-items-center" style="padding-top: 30px;">
           <div>
             <div style="text-align: left;">
@@ -181,7 +181,7 @@
           </div>
         </div>
       </div>
-      <div class="col-12 col-xl-5" style="padding: 0px;">
+      <div class="col-12 col-xl-5 col-md-4" style="padding: 0px;">
         <div>
           <img src="img/team photo.jpg" alt="team photo" class="responsive"
             style="padding-top: 75px; padding-bottom: 75px;">
@@ -222,13 +222,13 @@
 
     <div data-scroll-section class="row" style="width: 100%; padding: 0px; margin: 0px;">
 
-      <div class="col-xl-6" style="padding: 0px;">
+      <div class="col-xl-6 col-md-6" style="padding: 0px; background: #fff">
         <div>
           <img src="img/839 Graphic-01.png" alt="change up robot" class="responsive">
         </div>
 
       </div>
-      <div class="col-xl-6" style="padding: 0px;">
+      <div class="col-xl-6 col-md-6" style="padding: 0px;">
         <div class="white-section d-flex align-items-center" style="padding-top: 30px;">
           <div>
 
@@ -319,14 +319,14 @@
 
     <div data-scroll-section class="row" style="width: 100%; padding: 0px; margin: 0px;">
 
-      <div class="col-xl-6 order-xl-12" style="padding: 0px;">
+      <div class="col-xl-6 order-xl-12 col-md-6" style="padding: 0px; background: #fff">
         <div>
           <img src="img/839 Graphic-02.png" alt="change up robot" class="responsive">
         </div>
 
       </div>
 
-      <div class="col-xl-6 order-xl-1" style="padding: 0px;">
+      <div class="col-xl-6 order-xl-1 col-md-6" style="padding: 0px;">
         <div class="white-section d-flex align-items-center" style="padding-top: 30px;">
           <div>
 
