--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
 
 
     <!--FIRST SECTION-->
-    <div data-scroll-section class="row" style="width: 100%; padding: 0px; margin: 0px;">
-      <div class="col-xl-8" style="padding: 0px;">
+    <div data-scroll-section class="row" style="width: 100%; padding: 0px; margin: 0px; background: #171717;">
+      <div class="col-xl-8 col-md-5 col-12" style="padding: 0px;">
         <div class="first-section d-flex align-items-center" style="padding-top: 30px;">
           <div>
             <div style="text-align: left;">
@@ -143,7 +143,7 @@
           </div>
         </div>
       </div>
-      <div class="col-12 col-xl-4" style="padding: 0px;">
+      <div class="col-md-7 col-xl-4 col-12" style="padding: 0px;">
         <div>
           <img src="img/2021-2022/tipping point.jpg" alt="change up robot" class="responsive">
         </div>
@@ -154,7 +154,7 @@
 
     <!--SECOND SECTION-->
     <div data-scroll-section class="row" style="width: 100%; padding: 0px; margin: 0px; background: #fff700;">
-      <div class="col-xl-7" style="padding: 0px;">
+      <div class="col-xl-7 col-md-6" style="padding: 0px;">
         <div class="second-section d-flex align-items-center" style="padding-top: 30px;">
           <div>
             <div style="text-align: left;">
@@ -176,7 +176,7 @@
           </div>
         </div>
       </div>
-      <div class="col-12 col-xl-5" style="padding: 0px;">
+      <div class="col-12 col-xl-5 col-md-6" style="padding: 0px;">
         <div>
           <img src="img/ctfacility.jpg" alt="change up robot" class="responsive"
             style="padding-top: 35px; padding-bottom: 35px;">
@@ -246,7 +246,7 @@
 
     <!--FOURTH SECTION-->
     <div data-scroll-section class="row" style="width: 100%; padding: 0px; margin: 0px; background: #F8F8F8;">
-      <div class="col-xl-8" style="padding: 0px;">
+      <div class="col-xl-8 col-md-9 style="padding: 0px;">
         <div class="second-section d-flex align-items-center" style="padding-top: 30px;">
           <div>
             <div style="text-align: left;">
@@ -257,7 +257,7 @@
             <h2 class="section-heading" style="color: #000000; padding-right: 20px;">VEX WORLDS 2021</h2>
 
             <div class="row" style="width: 100%; padding: 0px; margin: 0px;">
-              <div class="col-md-9" style="padding: 0px;">
+              <div class="col-lg-8" style="padding: 0px;">
                 <p class="body-text" style="color: #000000;">The 2021 VRC World Championship was a great way to end off
                   the season. Middle school team 839Z scored a combined point of 198 in the second (Venus) division,
                   taking home division skills champion as well as Think Award. High school team 839A was placed in the
@@ -265,7 +265,7 @@
                   points.
                   Overall, the team had a lot of fun preparing and attending remote VEX Worlds!</p>
               </div>
-              <div class="col-12 col-md-3" style="padding: 0px;">
+              <div class="col-12 col-lg-4" style="padding: 0px;">
                 <pre class="fourth-section-score">
 <b>Results:</b>
 <i class="bi bi-dot"></i>839Z Rank: #1
@@ -277,7 +277,7 @@
             </div>
 
             <div class="row" style="width: 100%; padding: 0px; margin: 0px;">
-              <div class="col-mb-3" style="padding: 0px;">
+              <div class="col-md-6 col-xl-3" style="padding: 0px;">
                 <div style="display: flex; align-self: start; padding-left: 40px; padding-bottom: 40px;">
                   <button
                     onclick="window.location.href='https://www.roboticseducation.org/vex-robotics-world-championship/'"
@@ -285,7 +285,7 @@
                       style="float: right"></i></button>
                 </div>
               </div>
-              <div class="col-mb-10" style="padding: 0px;">
+              <div class="col-md-6 col-xl-9" style="padding: 0px;">
                 <div
                   style="display: flex; align-self: start; padding-left: 40px; padding-bottom: 40px; color: #000000;">
                   <button onclick="window.location.href='competitions.html'" class="btn btn-link-dark"
@@ -299,7 +299,7 @@
           </div>
         </div>
       </div>
-      <div class="col-12 col-xl-4" style="padding: 0px;">
+      <div class="col-12 col-xl-4 col-md-3" style="padding: 0px;">
         <div>
           <img src="img/ctclassicone.jpg" alt="change up robot" class="responsive" style="padding-top: 60px;">
         </div>
