--- a/join.html
+++ b/join.html
@@ -118,7 +118,7 @@
 
   <!--ABOUT SECTION-->
   <div data-scroll-section class="row" style="width: 100%; padding: 0px; margin: 0px; background: #F8F8F8;">
-    <div class="col-xl-8" style="padding: 0px;">
+    <div class="col-xl-8 col-md-6" style="padding: 0px;">
       <div class="second-section d-flex align-items-center" style="padding-top: 30px;">
         <div>
           <div style="text-align: left;">
@@ -133,7 +133,7 @@
             instructors, equipment, mentorship and team culture, allowing students on 839 to reach their full potential.
           </p>
 
-          <div style="display: flex; align-self: start; padding-left: 40px; padding-bottom: 10px;">
+          <div style="display: flex; align-self: start; padding-left: 40px; padding-bottom: 40px;">
             <button onclick="window.location.href='about.html'" class="btn btn-light shadow">MORE ABOUT US<i
                 class="bi bi-arrow-right" , style="float: right"></i></button>
           </div>
@@ -141,7 +141,7 @@
         </div>
       </div>
     </div>
-    <div class="col-12 col-xl-4" style="padding: 0px;">
+    <div class="col-12 col-xl-4 col-md-6" style="padding: 0px;">
       <div>
         <img src="img/839 website illlustrations-01.png" alt="change up robot" class="responsive"
           style="padding-top: 10px;">
@@ -153,14 +153,14 @@
 
   <!--VALUES SECTION-->
   <div data-scroll-section class="row" style="width: 100%; padding: 0px; margin: 0px; background: #ffffff;">
-    <div class="col-12 col-xl-5" style="padding: 0px;">
+    <div class="col-12 col-xl-5 col-md-5" style="padding: 0px;">
       <div>
         <img src="img/839 website illlustrations-02.png" alt="change up robot" class="responsive"
           style="padding-top: 10px;">
       </div>
 
     </div>
-    <div class="col-xl-7" style="padding: 0px;">
+    <div class="col-xl-7 col-md-5" style="padding: 0px;">
       <div class="second-section d-flex align-items-center" style="padding-top: 30px;">
         <div>
           <div style="text-align: left;">
@@ -185,7 +185,7 @@
 
 
   <!--LOCATION SECTION-->
-  <div data-scroll-section style="width: 100%; padding: 0px; height: 100vh;" class="cover-container d-flex w-100 p-1 mx-auto flex-column">
+  <div data-scroll-section style="width: 100%; padding: 0px; height: 100vh; background-image: url(img/maps.jpeg); background-position: center; background-size: cover;" class="cover-container d-flex w-100 p-1 mx-auto flex-column">
     <header class="mb-auto">
       <div>
         <h3><i class="bi bi-geo-alt-fill"></i></h3>
@@ -193,7 +193,7 @@
     </header>
 
 
-    <main class="px-3">
+    <main data-scroll data-scroll-speed="2" class="px-3">
 
       <p class="title-subheading">WE ARE LOCATED IN</p>
       <h1 class="title-name" style="font-size: 9vw;">MARKHAM, ONTARIO</h1>
@@ -354,15 +354,15 @@
 
   <!--JOIN SECTION-->
   <div data-scroll-section class="row" style="width: 100%; padding: 0px; margin: 0px; background: #171717;">
-    <div class="col-xl-9" style="padding-top: 60px; padding-bottom: 60px;">
+    <div class="col-md-8" style="padding-top: 60px; padding-bottom: 60px;">
       <div class="second-section d-flex align-items-center">
         <div>
           <h1 class="section-heading" style="color: #fff; padding-right: 10px;">SOUND GOOD?</h1>
         </div>
       </div>
     </div>
-    <div class="col-12 col-xl-3" style="padding-top: 60px; padding-bottom: 60px;">
-      <div class="second-section d-flex align-items-center mx-auto">
+    <div class="col-12 col-md-4" style="padding-top: 60px; padding-bottom: 60px;">
+      <div class="second-section d-flex align-items-center mx-auto"">
         <div style="display: flex; align-self: start;" class="mx-auto">
           <button onclick="window.location.href='https://forms.office.com/Pages/ResponsePage.aspx?id=PA5Ebz_QaUuD_BGsxHDozlrVNm6tcWFPnfmqroaBLahUNjdHWE84UzRRTTJLS1lWUFIwVElMR0VYUy4u'" class="btn btn-light shadow">APPLY NOW<i
               class="bi bi-arrow-right" , style="float: right"></i></button>
