--- a/index.html
+++ b/index.html
@@ -271,13 +271,12 @@
 <i class="bi bi-dot"></i>839Z Rank: #1
 <i class="bi bi-dot"></i>839A Rank: #36
 <i class="bi bi-dot"></i>Division Skills Champion
-<i class="bi bi-dot"></i>Think Award
-                </pre>
+<i class="bi bi-dot"></i>Think Award</pre>
               </div>
             </div>
 
             <div class="row" style="width: 100%; padding: 0px; margin: 0px;">
-              <div class="col-md-6 col-xl-3" style="padding: 0px;">
+              <div class="col-md-6 col-lg-6 col-xl-4 col-xxl-2" style="padding: 0px;">
                 <div style="display: flex; align-self: start; padding-left: 40px; padding-bottom: 40px;">
                   <button
                     onclick="window.location.href='https://www.roboticseducation.org/vex-robotics-world-championship/'"
@@ -285,7 +284,7 @@
                       style="float: right"></i></button>
                 </div>
               </div>
-              <div class="col-md-6 col-xl-9" style="padding: 0px;">
+              <div class="col-md-6 col-lg-6 col-xl-8 col-xxl-10" style="padding: 0px;">
                 <div
                   style="display: flex; align-self: start; padding-left: 40px; padding-bottom: 40px; color: #000000;">
                   <button onclick="window.location.href='competitions.html'" class="btn btn-link-dark"
