changed mobile smooth scroll to off

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 
         </div>
 
-        <img src="img/changeuptwo.jpg" alt="change up robot two" class="responsive" style="position: relative;">
+        <img src="img/sizer-01.png" alt="change up robot two" class="responsive" style="position: relative;">
         
       </div>
 
@@ -237,7 +237,7 @@
           </a>
 
         </div>
-        <img src="img/towertakeoverone.jpg" alt="change up robot two" class="responsive" style="position: relative;">
+        <img src="img/sizer-01.png" alt="change up robot two" class="responsive" style="position: relative;">
         
       </div>
     </div>
