--- a/index.html
+++ b/index.html
@@ -169,16 +169,15 @@
           <div>
             <div style="text-align: left;">
               <span class="section-subheadingct" style="color: #000000;">//</span><span class="section-subheading"
-                style="color: #000000;">WORKSPACE</span>
+                style="color: #000000;">OUR WORK</span>
             </div>
 
-            <h2 class="section-heading" style="color: #000000; padding-right: 20px;">OUR NEW FACILITY</h2>
+            <h2 class="section-heading" style="color: #000000; padding-right: 20px;">PREPARING FOR THE NEW SEASON</h2>
 
-            <p class="body-text" style="color: #000000;">Our new facility in Markham Ontario is equipped with a large
-              spacious room, new tools, great organizational features, as well as a space for us to meet.</p>
+            <p class="body-text" style="color: #000000;">With the VEX Robotics Competition Change Up season all done and dusted, we put all our focus to this season’s game, Tipping Point. Read on to learn about what our team has done to ensure this season is more successful than ever.</p>
 
             <div style="display: flex; align-self: start; padding-left: 40px; padding-bottom: 40px;">
-              <button onclick="window.location.href='articles/facilityarticle.html'" class="btn btn-light shadow">CHECK
+              <button onclick="window.location.href='articles/newseason2021.html'" class="btn btn-light shadow">CHECK
                 IT
                 OUT<i class="bi bi-arrow-right" , style="float: right"></i></button>
             </div>
@@ -188,7 +187,7 @@
       </div>
       <div class="col-12 col-xl-5 col-md-6" style="padding: 0px;">
         <div>
-          <img src="img/ctfacility.jpg" alt="change up robot" class="responsive"
+          <img src="img/article pics/Fusion360.png" alt="change up robot" class="responsive"
             style="padding-top: 35px; padding-bottom: 35px;">
         </div>
 
