--- a/join.html
+++ b/join.html
@@ -105,9 +105,9 @@
       <h1 class="title-name">JOIN THE TEAM</h1>
       <p class="lead">
         <button
-          onclick="window.location.href='https://forms.office.com/Pages/ResponsePage.aspx?id=PA5Ebz_QaUuD_BGsxHDozlrVNm6tcWFPnfmqroaBLahUNjdHWE84UzRRTTJLS1lWUFIwVElMR0VYUy4u'"
+          onclick="window.location.href='https://app.iclasspro.com/portal/cautiontape'"
           class="btn btn-light shadow">
-          APPLY NOW<i class="bi bi-arrow-right" , style="float: right"></i></button>
+          SIGN UP NOW<i class="bi bi-arrow-right" , style="float: right"></i></button>
       </p>
     </main>
 
@@ -249,9 +249,9 @@
               work with metal, screwdrivers and other industrial equipment. The builder can use Computer Aided Design
               (CAD) to design a robot.</p>
             <button
-              onclick="window.location.href='https://forms.office.com/Pages/ResponsePage.aspx?id=PA5Ebz_QaUuD_BGsxHDozlrVNm6tcWFPnfmqroaBLahUNjdHWE84UzRRTTJLS1lWUFIwVElMR0VYUy4u'"
+              onclick="window.location.href='https://app.iclasspro.com/portal/cautiontape'"
               class="btn btn-link" style="color: black;">
-              APPLY<i class="bi bi-arrow-right" , style="float: right"></i></button>
+              SIGN UP<i class="bi bi-arrow-right" , style="float: right"></i></button>
           </div>
         </div>
       </div>
@@ -267,9 +267,9 @@
               The programmer uses C++ as the main programming language, and incorporates many concepts of knowledge into
               the code.</p>
             <button
-              onclick="window.location.href='https://forms.office.com/Pages/ResponsePage.aspx?id=PA5Ebz_QaUuD_BGsxHDozlrVNm6tcWFPnfmqroaBLahUNjdHWE84UzRRTTJLS1lWUFIwVElMR0VYUy4u'"
+              onclick="window.location.href='https://app.iclasspro.com/portal/cautiontape'"
               class="btn btn-link" style="color: black;">
-              APPLY<i class="bi bi-arrow-right" , style="float: right"></i></button>
+              SIGN UP<i class="bi bi-arrow-right" , style="float: right"></i></button>
           </div>
         </div>
       </div>
@@ -286,9 +286,9 @@
               as well as skills challenges. The driver has fast reactions, can operate with a controller, and is able to
               collaborate and listen to instructions.</p>
             <button
-              onclick="window.location.href='https://forms.office.com/Pages/ResponsePage.aspx?id=PA5Ebz_QaUuD_BGsxHDozlrVNm6tcWFPnfmqroaBLahUNjdHWE84UzRRTTJLS1lWUFIwVElMR0VYUy4u'"
+              onclick="window.location.href='https://app.iclasspro.com/portal/cautiontape'"
               class="btn btn-link" style="color: black;">
-              APPLY<i class="bi bi-arrow-right" , style="float: right"></i></button>
+              SIGN UP<i class="bi bi-arrow-right" , style="float: right"></i></button>
           </div>
         </div>
       </div>
@@ -311,9 +311,9 @@
               The scout will also write documents about the team's robot. <i>This role is usually combined with another
                 role.</i></p>
             <button
-              onclick="window.location.href='https://forms.office.com/Pages/ResponsePage.aspx?id=PA5Ebz_QaUuD_BGsxHDozlrVNm6tcWFPnfmqroaBLahUNjdHWE84UzRRTTJLS1lWUFIwVElMR0VYUy4u'"
+              onclick="window.location.href='https://app.iclasspro.com/portal/cautiontape'"
               class="btn btn-link" style="color: black;">
-              APPLY<i class="bi bi-arrow-right" , style="float: right"></i></button>
+              SIGN UP<i class="bi bi-arrow-right" , style="float: right"></i></button>
           </div>
         </div>
       </div>
@@ -329,9 +329,9 @@
               the entire season. The strategist will also communicate with other teams at competitions. <i>This role is
                 usually combined with another role.</i></p>
             <button
-              onclick="window.location.href='https://forms.office.com/Pages/ResponsePage.aspx?id=PA5Ebz_QaUuD_BGsxHDozlrVNm6tcWFPnfmqroaBLahUNjdHWE84UzRRTTJLS1lWUFIwVElMR0VYUy4u'"
+              onclick="window.location.href='https://app.iclasspro.com/portal/cautiontape'"
               class="btn btn-link" style="color: black;">
-              APPLY<i class="bi bi-arrow-right" , style="float: right"></i></button>
+              SIGN UP<i class="bi bi-arrow-right" , style="float: right"></i></button>
           </div>
         </div>
       </div>
@@ -348,9 +348,9 @@
               external relations. The business team also manages the team budget, and communicates with new team
               members. <i>This role is usually combined with another role.</i></p>
             <button
-              onclick="window.location.href='https://forms.office.com/Pages/ResponsePage.aspx?id=PA5Ebz_QaUuD_BGsxHDozlrVNm6tcWFPnfmqroaBLahUNjdHWE84UzRRTTJLS1lWUFIwVElMR0VYUy4u'"
+              onclick="window.location.href='https://app.iclasspro.com/portal/cautiontape'"
               class="btn btn-link" style="color: black;">
-              APPLY<i class="bi bi-arrow-right" , style="float: right"></i></button>
+              SIGN UP<i class="bi bi-arrow-right" , style="float: right"></i></button>
           </div>
         </div>
       </div>
@@ -371,7 +371,7 @@
     <div class="col-12 col-md-4" style="padding-top: 60px; padding-bottom: 60px;">
       <div class="second-section d-flex align-items-center mx-auto"">
         <div style="display: flex; align-self: start;" class="mx-auto">
-          <button onclick="window.location.href='https://forms.office.com/Pages/ResponsePage.aspx?id=PA5Ebz_QaUuD_BGsxHDozlrVNm6tcWFPnfmqroaBLahUNjdHWE84UzRRTTJLS1lWUFIwVElMR0VYUy4u'" class="btn btn-light shadow">APPLY NOW<i
+          <button onclick="window.location.href='https://app.iclasspro.com/portal/cautiontape'" class="btn btn-light shadow">SIGN UP NOW<i
               class="bi bi-arrow-right" , style="float: right"></i></button>
         </div>
       </div>
